syntax="proto3";

package ad;

enum AdBidType {
    AD_BID_UNKOWN = 0;
    AD_BID_CPD = 1;
    AD_BID_CPM = 2;
    AD_BID_CPC = 3;
    AD_BID_CPA = 4;
    AD_BID_CAMPAIGN = 5;
};

enum AdStatus {
    AD_STATUS_UNKOWN = 0;
    AD_STATUS_FORMAL = 1;
    AD_STATUS_DELETED = 2;
    AD_STATUS_FROZEN = 3;
    AD_STATUS_UNREVIEWD = 4;
    AD_STATUS_APPROVED = 5;
    AD_STATUS_REJECT = 6;
    AD_STATUS_OVER_DUE = 7;
};

enum AdTimeType {
    AD_TIME_TYPE_UNKOWN = 0;
    AD_TIME_TYPE_CONTINUUS = 1;
    AD_TIME_TYPE_DISCRETE = 2;
};

//用来通知下线，比如广告，广告位等
enum OnLineStatus {
    ONLINE_STATUS_UNKOWN = 0;
    ONLINE_STATUS_ON = 1;         //在线
    ONLINE_STATUS_OFF = 2;        //离线
};

message AdShowRestrict {
    enum  AdShowRestrictType {
        AD_SHOW_RESTRICT_TYPE_UNKOWN = 0;
        AD_SHOW_RESTRICT_TYPE_USER_SHOW = 1;
        AD_SHOW_RESTRICT_TYPE_IP_SHOW = 2;
    };
    AdShowRestrictType restrict_type = 1;
    uint32 interval = 2;  // 每分钟，每小时，每天，每月
    uint64 time = 3;
};

message CreativeInfo {
    enum CreativeType {
        CREATIVE_TYPE_UNKNOWN = 0;
        CREATIVE_TYPE_TEXT = 1; // 文案
        CREATIVE_TYPE_IMG = 2; // 大图
        CREATIVE_TYPE_FLASH = 3; // js_tag
        CREATIVE_TYPE_VIDEO = 4; // 视频
        CREATIVE_TYPE_SINGLE = 5; // 单图
        CREATIVE_TYPE_NATIVE_IMAGE1_TEXT1 = 6;      // 原生大图_1图1文
        CREATIVE_TYPE_VEDIO_IMAGE1_TEXT1 = 7;       // 视频_1视频1图1文
        CREATIVE_TYPE_INTERACT_IMAGE2_TEXT1 = 8;    // 互动图文_2图1文
        CREATIVE_TYPE_SLIDE = 9;                    // 视窗滑动_1图1文
        CREATIVE_TYPE_THUMB_SINGLE_IMAGE = 10;      // 单图个性赞
        CREATIVE_TYPE_THUMB_BIG_IMAGE = 11;         // 大图个性赞
        CREATIVE_TYPE_THUMB_VIDEO = 12;             // 视频个性赞
        CREATIVE_TYPE_THUMB_INTERACT = 13;          // 互动个性赞
    };

    uint64 creative_id = 1;
    CreativeType creative_type = 2;
    uint64 format_id = 3;
    uint64 format_width = 4;
    uint64 format_height = 5;
    string text = 6;
    string img_url = 7;
    string description = 8;
    OnLineStatus on_line_status = 9;
    string icon_url = 10; //icon上传后的位置
    string title = 11; //标题
    string creative_format = 12; //素材格式包含尺寸等
    string title_desc = 13;
    uint64 app_height = 14;
    uint64 app_width = 15;
    string js_tag = 16;
    string btn_txt = 17;
    uint64 video_time = 18;  //视频播放时长
    string video_source = 19; //视频下载链接
    string play_url = 20; //视频播放链接
    string video_review = 21; //视频预览图
    string creative_name = 22; //素材名称
    uint32 display_prio = 23;  // 素材优先级
    uint32 edit_version = 24; // 素材版本号
    bool need_mraidjs = 25; // 是否需要mraidjs支持

    string packed_json = 1000; // 将所有素材信息打包后的json
};

enum PlatformType {
    PLATFORM_TYPE_KNNOWN = 0;
    PLATFORM_TYPE_PC = 1;
    PLATFORM_TYPE_MOBILE = 2;
};

//打开方式
enum LandingPageType {
    LANDING_PAGE_TYPE_UNKNOWN = 0;
    GP = 1;	//跳GP
    Website = 2;        //打开落地页
    WEB_INTRERNAL = 3;
    SHAREIT_INTERNAL = 4;
    DEEPLINK = 5;

};

enum DspType {
    DSP_TYPE_UNKNOWN = 0;
    DSP_TYPE_INMOBI = 1;
    DSP_TYPE_MOBVISTA = 2;
    DSP_TYPE_SHAREIT_ADX = 3;
}

message AdInfo {
    //step1. 基本信息
    uint64 ad_id = 1;
    string ad_name = 2;
    uint64 site_id = 3;
    uint64 adpos_id = 4;
    uint64 order_id = 5;
    AdStatus ad_status = 6;
    string click_url = 7;
    string ad_desc = 8;
    string order_name = 9;

    string tag_names = 10;
    PlatformType platform_type = 11;
    OnLineStatus is_online = 12;	//通知上下线
    uint64 update_time = 13;
    string landing_page = 14;

    //step2. 投放策略
    AdBidType bid_type = 20;
    uint32 bid_price = 21;

    AdTimeType advert_type = 22;
    uint64 begin_time = 23;
    uint64 end_time = 24;
    string advert_time = 25;
    uint32 priority_weight = 26;

    uint32 user_show_limit = 27;
    uint32 ip_show_limit = 28;
    repeated AdShowRestrict show_restrict = 29;	//用户或者ip限制的具体内容,由上面两个值决定是否读取

    uint64 budget_limit = 30;
    uint64 impression_limit = 31;
    uint64 click_limit = 32;

    uint64 day_budget_limit = 33;
    uint64 day_impr_limit = 34;
    uint64 day_click_limit = 35;
    float ad_ctr = 36;
    uint32 strategy_limit_type = 37;
    uint32 strategy_limit_num = 38;

    //step3. 定向
    uint64 terminal_type= 40;
    uint64 client_type  = 41;
    uint64 region_type  = 42;
    uint64 people_type  = 43;
    string targeting_limit = 44;
    string be_tree = 45; // 定向表达数，替代44字段


    //step4. 其他
    string monitor_url = 50;
    LandingPageType target_page = 51;
    string click_monitor_url = 52; //点击监控url
    uint64 adpos_type = 53; //广告位类型1:大图 2:文案
    string impr_monitor_url = 54; //曝光监控url
    int32 action_type = 55;
    uint32 valid_imp_duration = 56; // 广告有效曝光时间
    string deeplink_url = 57;
    uint32 auto_landing = 58; //跳转时机，30号素材规格，ad:layer_p_ptr1物理广告位客户端使用此字段

    //step5. 素材
    repeated CreativeInfo creative_infos = 60;

    //视频广告类信息
    int32 download_limit = 70;
    int32 auto = 71;
    int32 play_type = 72;
    int32 auto_play_condition = 73;
    int32 trans_limit = 74;
    string track_urls = 75;

    // 离线广告信息
    uint32 off_report = 80;
    string off_impre_url = 81;
    uint64 off_report_valid = 82;
    uint32 show_condition = 83;

    // 第三方广告相关
    DspType dsp_type = 100;
    string dsp_pos_id = 101;
    repeated string dsp_download_track_urls = 102;
    repeated string dsp_imp_track_urls = 103;
    repeated string dsp_click_track_urls = 104;
    repeated string dsp_cached_track_urls = 105;
    string dsp_creative = 106;
    CreativeInfo.CreativeType dsp_creative_type = 107; // dsp绑定的规格信息
    int32 inmobi_banner_width = 108;
    int32 inmobi_banner_height = 109;
    // 之前后面的字段没有为dsp预留更多的信息，这里讲300-400保留给dsp
    repeated string dsp_start_urls = 301;
    repeated string dsp_quarter_urls = 302;
    repeated string dsp_half_urls = 303;
    repeated string dsp_three_quarter_urls = 304;
    repeated string dsp_complete_urls = 305;
    repeated string dsp_resume_urls = 306;
    int32 shareit_adx_dsp_type = 307;

    // 用户累计看一个广告多少次
    uint32 user_accumulate_limit = 110;
    //素材规格编号
    uint32 creative_format_id = 111;

    // app广告相关
    repeated string app_title = 200;
    string app_package_name = 201;
    bool need_anti_hijack = 202;
    string anti_hijack = 203;

};

message DspPositionInfo {
    string dsp_name = 1; // DSP名称，如inmobi
    string dsp_info = 2; // DSP与adshonor广告位对应的信息，格式为json，方便兼容多个第三方平台
}

message AdPosition {

    //广告位类型
    enum AdPositionType {
        AD_POSITION_UNKNOWN = 0;
        AD_POSITION_FIXED = 1 ;		//固定
        AD_POSITION_POPUP = 2;       	//弹窗
        AD_POSITION_FLOAT = 3;		//悬浮
        AD_POSITION_FEEDS = 4;		//feeds
        AD_POSITION_FLEX = 5;			//伸缩
        AD_POSITION_COUPLE = 6;		//对联
        AD_POSITION_WINDOWN = 7;		//橱窗
    };

    message PositionOrderInfo{
        uint32 order_num=1;	//第几轮播
        uint64 order_id=2;	//订单
        string order_name=3; //订单名字
    }

    message AppVersionInfo {
        int32 os_type = 1;
        int32 app_version = 2;
        uint32 supported_crt_size = 3;
        string app_name = 4;
    }

    uint64 adpos_id = 1;
    string adpos_name = 2;
    OnLineStatus adpos_status = 3;
    AdPositionType adpos_type = 4;
    PlatformType platform_type = 5;
    uint64 channel_id = 6;
    uint64 site_id = 7;
    uint64 format_id = 8;
    uint64 format_width = 9;
    uint64 format_height = 10;
    uint64 publish_price = 11;
    string adpos_description = 12;
    uint32 max_adnum = 13;
    LandingPageType target_page = 14;
    repeated PositionOrderInfo position_order = 15;
    int64 x_pixel = 16;
    int64 y_pixel = 17;

    repeated DspPositionInfo dsp_infos = 100;
    repeated AppVersionInfo app_version_info = 101;
};

message ChannelInfo {
    string app_id = 1;
    int32 app_version = 2;
    repeated LandingPageType supported_lp_type = 3; // 支持的点击跳转类型
}

message AdInfos {
    repeated AdInfo ad_infos = 1;
    uint64 dump_time = 2;
}

message AdPositions {
    repeated AdPosition ad_positions = 1;
    uint64 dump_time = 2;
    repeated ChannelInfo channel_infos = 3;
}
